@@ -7,6 +7,7 @@ UTIL:
 BUGFIX:
 * type=rule-merger | bugfix if argument exportcsv=xyz projectfolder=xyz and rules are skipped - to create skipped output file correctly
 * class ReferenceableObject | bugfix for - type=rule 'filter=(reflocation is.only DGNAME)'
+* type=address | bugfix for 'filter=(reflocation is DGNAME)' if multiple reflocation are used
 
 GENERAL
 
